--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.3",
     "prettier": "^2.4.1",
+    "require-from-string": "^2.0.2",
     "sass": "^1.41.1",
     "vite": "^2.5.10"
   }
