--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy": "^1.0.0-canary.40",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -23,6 +23,7 @@
     "prettier": "^2.4.1",
     "require-from-string": "^2.0.2",
     "sass": "^1.41.1",
+    "slinkity": "^0.1.7",
     "vite": "^2.5.10"
   }
 }
