--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "node-fetch": "^2.6.5",
     "prettier": "^2.4.1",
     "sass": "^1.41.1",
-    "slinkity": "github:slinkity/slinkity#feat/51/vite-ssr-middleware",
+    "slinkity": "^0.3.1",
     "vite": "^2.5.10"
   }
 }
