--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently 'eleventy --watch --incremental' 'vite _site'"
+    "start": "concurrently \"eleventy --watch --incremental\" \"vite _site\""
   },
   "keywords": [],
   "author": "",
